MDEV-5613 m_string.h exports generic function names without a namespace prefix, like str2int

don't include m_string. in my_valgrind.h