mysys/file_logger.c
@@ -16,6 +16,7 @@
 
 #include "my_global.h"
 #include <my_sys.h>
+#include <m_string.h>
 #include <mysql/service_logger.h>
 #include <my_pthread.h>
 
